--- a/portal/html/USR-02-04-B-LIST.html
+++ b/portal/html/USR-02-04-B-LIST.html
@@ -349,7 +349,8 @@
                             <div class="board_infobox">
                                 <div class="total">전체 <span>214</span>건</div>
                                 <div class="search_box">
-                                    <input type="text" placeholder="검색어를 입력해주세요.">
+                                    <label for="search_01" class="hidden">검색어 입력</label>
+                                    <input type="text" id="search_01" placeholder="검색어를 입력해주세요.">
                                     <button>검색</button>
                                 </div>
                             </div>
@@ -463,7 +464,8 @@
                             <div class="board_infobox">
                                 <div class="total">전체 <span>214</span>건</div>
                                 <div class="search_box">
-                                    <input type="text" placeholder="검색어를 입력해주세요.">
+                                    <label for="search_02" class="hidden">검색어 입력</label>
+                                    <input type="text" id="search_02" placeholder="검색어를 입력해주세요.">
                                     <button>검색</button>
                                 </div>
                             </div>
@@ -576,7 +578,8 @@
                             <div class="board_infobox">
                                 <div class="total">전체 <span>214</span>건</div>
                                 <div class="search_box">
-                                    <input type="text" placeholder="검색어를 입력해주세요.">
+                                    <label for="search_03" class="hidden">검색어 입력</label>
+                                    <input type="text" id="search_03" placeholder="검색어를 입력해주세요.">
                                     <button>검색</button>
                                 </div>
                             </div>
@@ -689,7 +692,8 @@
                             <div class="board_infobox">
                                 <div class="total">전체 <span>214</span>건</div>
                                 <div class="search_box">
-                                    <input type="text" placeholder="검색어를 입력해주세요.">
+                                    <label for="search_04" class="hidden">검색어 입력</label>
+                                    <input type="text" id="search_04" placeholder="검색어를 입력해주세요.">
                                     <button>검색</button>
                                 </div>
                             </div>
