--- a/portal/html/USR-1010-F-LIST.html
+++ b/portal/html/USR-1010-F-LIST.html
@@ -795,35 +795,40 @@
                         <ul>
                             <li>
                                 <div class="sel_box">
-                                    <select>
+                                    <label for="sel_01" class="hidden">선택</label>
+                                    <select id="sel_01">
                                         <option value="">신규등록</option>
                                     </select>
                                 </div>
                             </li>
                             <li>
                                 <div class="sel_box">
-                                    <select>
+                                    <label for="sel_02" class="hidden">선택</label>
+                                    <select id="sel_02">
                                         <option value="">최근업데이트</option>
                                     </select>
                                 </div>
                             </li>
                             <li>
                                 <div class="sel_box">
-                                    <select>
+                                    <label for="sel_03" class="hidden">선택</label>
+                                    <select id="sel_03">
                                         <option value="">업력</option>
                                     </select>
                                 </div>
                             </li>
                             <li>
                                 <div class="sel_box">
-                                    <select>
+                                    <label for="sel_04" class="hidden">선택</label>
+                                    <select id="sel_04">
                                         <option value="">투자희망금액</option>
                                     </select>
                                 </div>
                             </li>
                             <li>
                                 <div class="sel_box">
-                                    <select>
+                                    <label for="sel_05" class="hidden">선택</label>
+                                    <select id="sel_05">
                                         <option value="">내 기업정보 등록</option>
                                     </select>
                                 </div>
