--- a/portal/html/USR-1054-F-FORM.html
+++ b/portal/html/USR-1054-F-FORM.html
@@ -1144,14 +1144,16 @@
                                                                         <td>
                                                                             <div class="inp_group">
                                                                                 <div class="inp_box datepicker_box">
-                                                                                    <input type="text" class="datepicker_day">
+                                                                                    <label for="date_01" class="hidden">날짜입력</label>
+                                                                                    <input type="text" id="date_01" class="datepicker_day">
                                                                                 </div>
                                                                             </div>
                                                                         </td>
                                                                         <td>
                                                                             <div class="inp_group txt">
                                                                                 <div class="inp_box">
-                                                                                    <input type="text">
+                                                                                    <label for="txt_01" class="hidden">입력</label>
+                                                                                    <input type="text" id="txt_01">
                                                                                 </div>
                                                                                 <span class="txt">억원</span>
                                                                             </div>
@@ -1159,7 +1161,8 @@
                                                                         <td>
                                                                             <div class="inp_group">
                                                                                 <div class="inp_box">
-                                                                                    <input type="text">
+                                                                                    <label for="txt_02" class="hidden">입력</label>
+                                                                                    <input type="text" id="txt_02">
                                                                                 </div>
                                                                             </div>
                                                                         </td>
@@ -1176,14 +1179,16 @@
                                                                         <td>
                                                                             <div class="inp_group">
                                                                                 <div class="inp_box datepicker_box">
-                                                                                    <input type="text" class="datepicker_day">
+                                                                                    <label for="date_02" class="hidden">입력</label>
+                                                                                    <input type="text" id="date_02" class="datepicker_day">
                                                                                 </div>
                                                                             </div>
                                                                         </td>
                                                                         <td>
                                                                             <div class="inp_group txt">
                                                                                 <div class="inp_box">
-                                                                                    <input type="text">
+                                                                                    <label for="txt_03" class="hidden">입력</label>
+                                                                                    <input type="text" id="txt_03">
                                                                                 </div>
                                                                                 <span class="txt">억원</span>
                                                                             </div>
@@ -1191,7 +1196,8 @@
                                                                         <td>
                                                                             <div class="inp_group">
                                                                                 <div class="inp_box">
-                                                                                    <input type="text">
+                                                                                    <label for="txt_04" class="hidden">입력</label>
+                                                                                    <input type="text" id="txt_04">
                                                                                 </div>
                                                                             </div>
                                                                         </td>
