--- a/portal/html/USR-1235-B-LIST.html
+++ b/portal/html/USR-1235-B-LIST.html
@@ -336,7 +336,8 @@
                     <div class="total">전체 <span>150</span>건</div>
                     <div class="search_box">
                         <div class="sel_box">
-                            <select>
+                            <label for="sel_01" class="hidden">선택</label>
+                            <select id="sel_01">
                                 <option value="">검색조건</option>
                                 <option value="">셀렉트박스</option>
                                 <option value="">셀렉트박스</option>
