--- a/portal/html/USR-1241-F-LIST.html
+++ b/portal/html/USR-1241-F-LIST.html
@@ -347,13 +347,15 @@
                                 <div class="total">전체 <span>150</span>건</div>
                                 <div class="search_box">
                                     <div class="sel_box">
-                                        <select>
+                                        <label for="search_01" class="hidden">선택</label>
+                                        <select id="search_01">
                                             <option value="">검색조건</option>
                                             <option value="">셀렉트박스</option>
                                             <option value="">셀렉트박스</option>
                                         </select>
                                     </div>
-                                    <input type="text" placeholder="검색어를 입력해주세요.">
+                                    <label for="search_02" class="hidden">검색어 입력</label>
+                                    <input type="text" id="search_02" placeholder="검색어를 입력해주세요.">
                                     <button>검색</button>
                                 </div>
                             </div>
@@ -631,13 +633,15 @@
                                 <div class="total">전체 <span>145894</span>건</div>
                                 <div class="search_box">
                                     <div class="sel_box">
-                                        <select>
+                                        <label for="search_03" class="hidden">선택</label>
+                                        <select id="search_03">
                                             <option value="">검색조건</option>
                                             <option value="">셀렉트박스</option>
                                             <option value="">셀렉트박스</option>
                                         </select>
                                     </div>
-                                    <input type="text" placeholder="검색어를 입력해주세요.">
+                                    <label for="search_04" class="hidden">검색어 입력</label>
+                                    <input type="text" id="search_04" placeholder="검색어를 입력해주세요.">
                                     <button>검색</button>
                                 </div>
                             </div>
@@ -923,13 +927,15 @@
                                 <div class="total">전체 <span>15</span>건</div>
                                 <div class="search_box">
                                     <div class="sel_box">
-                                        <select>
+                                        <label for="search_05" class="hidden">선택</label>
+                                        <select id="search_05">
                                             <option value="">검색조건</option>
                                             <option value="">셀렉트박스</option>
                                             <option value="">셀렉트박스</option>
                                         </select>
                                     </div>
-                                    <input type="text" placeholder="검색어를 입력해주세요.">
+                                    <label for="search_06" class="hidden">검색어 입력</label>
+                                    <input type="text" id="search_06" placeholder="검색어를 입력해주세요.">
                                     <button>검색</button>
                                 </div>
                             </div>
