--- a/portal/html/USR-1242-F-FORM.html
+++ b/portal/html/USR-1242-F-FORM.html
@@ -398,6 +398,7 @@
                                 <td colspan="3">
                                     <div class="inp_group inp_num">
                                         <div class="textarea_box">
+                                            <label for="textarea_01" class="hidden">입력</label>
                                             <textarea id="textarea_01"></textarea>
                                         </div>
                                         <span class="count">
@@ -458,10 +459,12 @@
                                                             <div class="period_group">
                                                                 <div class="inp_group period">
                                                                     <div class="inp_box datepicker_box">
+                                                                        <label for="input_03" class="hidden">입력</label>
                                                                         <input type="text" id="input_03" class="datepicker_start">
                                                                     </div>
                                                                     <span>~</span>
                                                                     <div class="inp_box datepicker_box">
+                                                                        <label for="input_04" class="hidden">입력</label>
                                                                         <input type="text" id="input_04" class="datepicker_end">
                                                                     </div>
                                                                 </div>
@@ -478,6 +481,7 @@
                                                         <td colspan="2">
                                                             <div class="inp_group inp_num">
                                                                 <div class="inp_box">
+                                                                    <label for="input_05" class="hidden">입력</label>
                                                                     <input type="text" id="input_05">
                                                                 </div>
                                                                 <span class="count">
@@ -499,6 +503,7 @@
                                                         </td>
                                                         <td>
                                                             <div class="inp_box">
+                                                                <label for="input_06" class="hidden">입력</label>
                                                                 <input type="text" id="input_06">
                                                             </div>
                                                         </td>
@@ -506,10 +511,12 @@
                                                             <div class="period_group">
                                                                 <div class="inp_group period">
                                                                     <div class="inp_box datepicker_box">
+                                                                        <label for="input_07" class="hidden">입력</label>
                                                                         <input type="text" id="input_07" class="datepicker_start">
                                                                     </div>
                                                                     <span>~</span>
                                                                     <div class="inp_box datepicker_box">
+                                                                        <label for="input_08" class="hidden">입력</label>
                                                                         <input type="text" id="input_08" class="datepicker_end">
                                                                     </div>
                                                                 </div>
@@ -520,6 +527,7 @@
                                                         <td colspan="2">
                                                             <div class="inp_group inp_num">
                                                                 <div class="inp_box">
+                                                                    <label for="input_09" class="hidden">입력</label>
                                                                     <input type="text" id="input_09">
                                                                 </div>
                                                                 <span class="count">
@@ -548,10 +556,12 @@
                                                             <div class="period_group">
                                                                 <div class="inp_group period">
                                                                     <div class="inp_box datepicker_box">
+                                                                        <label for="input_10" class="hidden">입력</label>
                                                                         <input type="text" id="input_10" class="datepicker_start">
                                                                     </div>
                                                                     <span>~</span>
                                                                     <div class="inp_box datepicker_box">
+                                                                        <label for="input_11" class="hidden">입력</label>
                                                                         <input type="text" id="input_11" class="datepicker_end">
                                                                     </div>
                                                                 </div>
@@ -562,6 +572,7 @@
                                                         <td colspan="2">
                                                             <div class="inp_group inp_num">
                                                                 <div class="inp_box">
+                                                                    <label for="input_12" class="hidden">입력</label>
                                                                     <input type="text" id="input_12">
                                                                 </div>
                                                                 <span class="count">
@@ -672,7 +683,8 @@
                     <td colspan="4">
                         <div class="inp_group">
                             <div class="textarea_box cont">
-                                <textarea id="textarea_01"></textarea>
+                                <label for="textarea_011" class="hidden">입력</label>
+                                <textarea id="textarea_011"></textarea>
                             </div>
                         </div>
                     </td>
