--- a/portal/html/USR-1334-F-DASH.html
+++ b/portal/html/USR-1334-F-DASH.html
@@ -527,7 +527,8 @@
                             <div class="board_infobox">
                                 <div class="total">전체 <span>150</span>건</div>
                                 <div class="search_box">
-                                    <input type="text" placeholder="검색어를 입력해주세요.">
+                                    <label for="search_01" class="hidden">검색어 입력</label>
+                                    <input type="text" id="search_01" placeholder="검색어를 입력해주세요.">
                                     <button>검색</button>
                                 </div>
                             </div>
@@ -690,7 +691,8 @@
                             <div class="board_infobox">
                                 <div class="total">전체 <span>150</span>건</div>
                                 <div class="search_box">
-                                    <input type="text" placeholder="검색어를 입력해주세요.">
+                                    <label for="search_01" class="hidden">검색어 입력</label>
+                                    <input type="text" id="search_01" placeholder="검색어를 입력해주세요.">
                                     <button>검색</button>
                                 </div>
                             </div>
@@ -853,7 +855,8 @@
                             <div class="board_infobox">
                                 <div class="total">전체 <span>150</span>건</div>
                                 <div class="search_box">
-                                    <input type="text" placeholder="검색어를 입력해주세요.">
+                                    <label for="search_01" class="hidden">검색어 입력</label>
+                                    <input type="text" id="search_01" placeholder="검색어를 입력해주세요.">
                                     <button>검색</button>
                                 </div>
                             </div>
@@ -1031,7 +1034,8 @@
                                                 <!-- 전체 <span>150</span>건 -->
                                             </div>
                                             <div class="search_box">
-                                                <input type="text" placeholder="검색어를 입력해주세요.">
+                                                <label for="search_02" class="hidden">검색어 입력</label>
+                                                <input type="text" id="search_02" placeholder="검색어를 입력해주세요.">
                                                 <button>검색</button>
                                             </div>
                                         </div>
@@ -1329,7 +1333,8 @@
                                                 <!-- 전체 <span>150</span>건 -->
                                             </div>
                                             <div class="search_box">
-                                                <input type="text" placeholder="검색어를 입력해주세요.">
+                                                <label for="search_03" class="hidden">검색어 입력</label>
+                                                <input type="text" id="search_03" placeholder="검색어를 입력해주세요.">
                                                 <button>검색</button>
                                             </div>
                                         </div>
@@ -1633,7 +1638,8 @@
                                                 <!-- 전체 <span>150</span>건 -->
                                             </div>
                                             <div class="search_box">
-                                                <input type="text" placeholder="검색어를 입력해주세요.">
+                                                <label for="search_04" class="hidden">검색어 입력</label>
+                                                <input type="text" id="search_04" placeholder="검색어를 입력해주세요.">
                                                 <button>검색</button>
                                             </div>
                                         </div>
@@ -1902,7 +1908,8 @@
                                                 <!-- 전체 <span>150</span>건 -->
                                             </div>
                                             <div class="search_box">
-                                                <input type="text" placeholder="검색어를 입력해주세요.">
+                                                <label for="search_05" class="hidden">검색어 입력</label>
+                                                <input type="text" id="search_05" placeholder="검색어를 입력해주세요.">
                                                 <button>검색</button>
                                             </div>
                                         </div>
@@ -2178,7 +2185,8 @@
                                                 <!-- 전체 <span>150</span>건 -->
                                             </div>
                                             <div class="search_box">
-                                                <input type="text" placeholder="검색어를 입력해주세요.">
+                                                <label for="search_06" class="hidden">검색어 입력</label>
+                                                <input type="text" id="search_06" placeholder="검색어를 입력해주세요.">
                                                 <button>검색</button>
                                             </div>
                                         </div>
