--- a/portal/html/USR-1341-F-LIST.html
+++ b/portal/html/USR-1341-F-LIST.html
@@ -334,7 +334,8 @@
     
                     <div class="talk_txt">
                         <div class="textarea_box">
-                            <textarea placeholder="벤처투자 TALK는 500자 까지 작성 가능합니다."></textarea>
+                            <label for="talk_01" class="hidden">입력</label>
+                            <textarea id="talk_01" placeholder="벤처투자 TALK는 500자 까지 작성 가능합니다."></textarea>
                         </div>
                         <div class="talk_txt_info">
                             <div class="left">
@@ -345,7 +346,8 @@
                             </div>
                             <div class="right">
                                 <div class="sel_box">
-                                    <select>
+                                    <label for="talk_sel_01" class="hidden">선택</label>
+                                    <select id="talk_sel_01">
                                         <option value="">셀렉트박스</option>
                                         <option value="">셀렉트박스</option>
                                         <option value="">셀렉트박스</option>
@@ -1024,7 +1026,8 @@
                                                 </select>
                                             </div>
                                             <div class="search_box">
-                                                <input type="text" placeholder="검색어를 입력해주세요.">
+                                                <label for="search_02" class="hidden">검색어 입력</label>
+                                                <input type="text" id="search_02" placeholder="검색어를 입력해주세요.">
                                                 <button>검색</button>
                                             </div>
                                         </div>
@@ -1246,7 +1249,8 @@
                                         <div class="board_infobox">
                                             <div></div>
                                             <div class="search_box">
-                                                <input type="text" placeholder="검색어를 입력해주세요.">
+                                                <label for="search_03" class="hidden">검색어 입력</label>
+                                                <input type="text" id="search_03" placeholder="검색어를 입력해주세요.">
                                                 <button>검색</button>
                                             </div>
                                         </div>
@@ -1472,7 +1476,8 @@
                                         <div class="board_infobox">
                                             <div></div>
                                             <div class="search_box">
-                                                <input type="text" placeholder="검색어를 입력해주세요.">
+                                                <label for="search_04" class="hidden">검색어 입력</label>
+                                                <input type="text" id="search_04" placeholder="검색어를 입력해주세요.">
                                                 <button>검색</button>
                                             </div>
                                         </div>
@@ -1788,6 +1793,7 @@
                     <td colspan="4">
                         <div class="inp_group">
                             <div class="textarea_box cont">
+                                <label for="textarea_01" class="hidden">입력</label>
                                 <textarea id="textarea_01"></textarea>
                             </div>
                         </div>
@@ -1817,7 +1823,8 @@
 
     <div class="talk_txt">
         <div class="textarea_box">
-            <textarea placeholder="벤처투자 TALK는 500자 까지 작성 가능합니다."></textarea>
+            <label for="talk_txt" class="hidden">입력</label>
+            <textarea id="talk_txt" placeholder="벤처투자 TALK는 500자 까지 작성 가능합니다."></textarea>
         </div>
         <div class="talk_txt_info">
             <div class="left">
