--- a/portal/html/USR-1350-F-FORM.html
+++ b/portal/html/USR-1350-F-FORM.html
@@ -402,9 +402,11 @@
                                             </select>
                                         </div>
                                         <div class="inp_box">
+                                            <label for="input_06" class="hidden">입력</label>
                                             <input type="text" id="input_06">
                                         </div>
                                         <div class="inp_box">
+                                            <label for="input_07" class="hidden">입력</label>
                                             <input type="text" id="input_07">
                                         </div>
                                     </div>
@@ -418,10 +420,12 @@
                                             </div>
                                             <span>@</span>
                                             <div class="inp_box">
+                                                <label for="input_11" class="hidden">입력</label>
                                                 <input type="text" id="input_11">
                                             </div>
                                         </div>
                                         <div class="sel_box">
+                                            <label for="sel_03" class="hidden">선택</label>
                                             <select id="sel_03">
                                                 <option value="">직접입력</option>
                                                 <option value="">naver.com</option>
