--- a/portal/html/USR-2012-F-FORM.html
+++ b/portal/html/USR-2012-F-FORM.html
@@ -430,9 +430,11 @@
                                                 </select>
                                             </div>
                                             <div class="inp_box">
+                                                <label for="input_06" class="hidden">전화번호 중간자리</label>
                                                 <input type="text" id="input_06">
                                             </div>
                                             <div class="inp_box">
+                                                <label for="input_07" class="hidden">전화번호 중간자리</label>
                                                 <input type="text" id="input_07">
                                             </div>
                                         </div>
@@ -465,14 +467,17 @@
                                         <div class="inp_group email">
                                             <div>
                                                 <div class="inp_box">
+                                                    <label for="input_10" class="hidden">이메일 아이디</label>
                                                     <input type="text" id="input_10">
                                                 </div>
                                                 <span>@</span>
                                                 <div class="inp_box">
+                                                    <label for="input_11" class="hidden">이메일 뒷 메일</label>
                                                     <input type="text" id="input_11">
                                                 </div>
                                             </div>
                                             <div class="sel_box">
+                                                <label for="sel_03" class="hidden">이메일 주소 선택</label>
                                                 <select id="sel_03">
                                                     <option value="">직접입력</option>
                                                     <option value="">naver.com</option>
@@ -598,7 +603,7 @@
                                             </span>
                                             <span>
                                                 <input type="checkbox" id="chk_14">
-                                                <label for="chkchk_14_02">ICT서비스</label>
+                                                <label for="chk_14">ICT서비스</label>
                                             </span>
                                             <span>
                                                 <input type="checkbox" id="chk_15">
