--- a/portal/html/USR-2020-F-FORM.html
+++ b/portal/html/USR-2020-F-FORM.html
@@ -323,10 +323,12 @@
                         <div class="login_content">
                             <div class="inp_group">
                                 <div class="inp_box">
-                                    <input type="text" placeholder="아이디">
+                                    <label for="login_01" class="hidden">아이디 입력</label>
+                                    <input type="text" id="login_01" placeholder="아이디">
                                 </div>
                                 <div class="inp_box">
-                                    <input type="password" placeholder="비밀번호">
+                                    <label for="login_02" class="hidden">비밀번호 입력</label>
+                                    <input type="password" id="login_02" placeholder="비밀번호">
                                 </div>
                             </div>
                             <div class="btn_box">
