--- a/portal/html/USR-2031-F-FORM.html
+++ b/portal/html/USR-2031-F-FORM.html
@@ -323,6 +323,7 @@
                     <div class="find_content">
                         <div class="find_inp">
                             <div class="inp_box">
+                                <label for="input_01" class="hidden">아이디 입력</label>
                                 <input type="text" id="input_01" placeholder="아이디">
                             </div>
                         </div>
@@ -490,10 +491,12 @@
         </div>
         <div class="inp_group">
             <div class="inp_box">
-                <input type="password" placeholder="비밀번호">
+                <label for="password_01" class="hidden">비밀번호 입력</label>
+                <input type="password" id="password_01" placeholder="비밀번호">
             </div>
             <div class="inp_box">
-                <input type="password" placeholder="비밀번호 확인">
+                <label for="password_02" class="hidden">비밀번호 확인 입력</label>
+                <input type="password" id="password_02" placeholder="비밀번호 확인">
             </div>
         </div>
         <div class="find_password_txt">
