--- a/portal/html/main.html
+++ b/portal/html/main.html
@@ -1508,7 +1508,8 @@
                 </ul>
                 <div class="familysite_box">
                     <div class="family_select">
-                        <select>
+                        <label for="family_select">관련사이트 선택</label>
+                        <select id="family_select">
                             <option value="">관련사이트</option>
                             <option value="">관련사이트좀더긴텍스트</option>
                             <option value="">관련사이트</option>
