--- a/portal/html/USR-1232-B-LIST.html
+++ b/portal/html/USR-1232-B-LIST.html
@@ -339,7 +339,8 @@
                     </div>
                     <div class="search_box">
                         <div class="sel_box">
-                            <select>
+                            <label for="sel_01" class="hidden">선택</label>
+                            <select id="sel_01">
                                 <option value="">기관 전체</option>
                                 <option value="">한국벤처투자</option>
                                 <option value="">한국벤처캐피탈협회</option>
@@ -348,7 +349,8 @@
                             </select>
                         </div>
                         <div class="sel_box">
-                            <select>
+                            <label for="sel_02" class="hidden">선택</label>
+                            <select id="sel_02">
                                 <option value="">전체</option>
                                 <option value="">뉴스레터</option>
                                 <option value="">웹진</option>
