--- a/portal/html/USR-2045-F-LIST.html
+++ b/portal/html/USR-2045-F-LIST.html
@@ -999,6 +999,7 @@
                     <td colspan="4">
                         <div class="inp_group">
                             <div class="textarea_box cont">
+                                <label for="textarea_01" class="hidden">입력</label>
                                 <textarea id="textarea_01"></textarea>
                             </div>
                         </div>
